use tsx instead of ts-node

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.ts",
   "scripts": {
     "migrate-db": "npx kysely-codegen --dialect mysql",
-    "start": "npx ts-node -r tsconfig-paths/register ./src/server.ts"
+    "start": "npx tsx -r tsconfig-paths/register ./src/server.ts"
   },
   "author": "",
   "license": "ISC",
