--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/fluent-ffmpeg": "^2.1.21",
     "@types/formidable": "^3.4.2",
