--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,9 @@
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
+    "@types/express-useragent": "^1.0.5",
     "@types/fluent-ffmpeg": "^2.1.21",
     "@types/formidable": "^3.4.2",
     "@types/jest": "^29.5.10",
