--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-useragent": "^1.0.15",
     "fluent-ffmpeg": "^2.1.2",
     "formidable": "^3.5.1",
+    "helmet": "^7.1.0",
     "kysely": "^0.25.0",
     "mysql2": "^3.3.3",
     "tsconfig-paths": "^4.2.0",
