--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
         "skipLibCheck": true,
         "incremental": false,
         "resolveJsonModule": true,
-        "types": ["jest", "node"],
+        "types": ["node"],
     }
 }
