--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "author": "Joseph Goyer",
     "license": "MIT",
     "scripts": {
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "start-server": "npm start -w packages/server",
+        "start-client": "npm start -w packages/client",
+        "dev": "run-p start-server start-client"
     },
     "workspaces": [
         "packages/server",
@@ -22,6 +25,7 @@
         "@typescript-eslint/parser": "^5.59.9",
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^8.8.0",
+        "npm-run-all": "^4.1.5",
         "prettier": "^2.8.8",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1"
