--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "license": "MIT",
     "scripts": {
         "start-server": "npm start -w packages/apps/server",
+        "start-client": "npm start -w packages/apps/client",
         "build-client": "npm run build -w packages/apps/client",
-        "migrate-db": "npm run migrate latest -w packages/libs/db"
+        "migrate-db": "npm run migrate latest -w packages/libs/db",
+        "dev-server": "dotenv -e .dev.env -e packages/apps/server/.dev.env npm run start-server",
+        "dev-client": "dotenv -e .dev.env npm run start-client",
+        "dev": "npm-run-all --parallel dev-server dev-client"
     },
     "workspaces": [
         "packages/apps/client",
@@ -27,6 +31,7 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^2.8.8",
         "ts-jest": "^29.1.1",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "dotenv-cli": "^7.4.2"
     }
 }
